--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ h1 {
     background-color: #4d4d4d;
     padding: 1rem;
     border-radius: 8px;
+    align-items: center;
 }
 
 .setting-item {
@@ -136,6 +137,7 @@ h1 {
     justify-content: center;
     align-items: center;
     font-weight: 400;
+    width: 100%;
 }
 
 .setting-item label {
@@ -153,4 +155,5 @@ h1 {
     background-color: #5d5d5d;
     color: #ffffff;
     font-weight: 600;
+    margin: 0;
 }
