--- a/styles.css
+++ b/styles.css
@@ -48,13 +48,15 @@ h1 {
     margin-bottom: 1rem;
     color: #ffffff;
     background-color: #4d4d4d;
-    padding: 1rem;
+    padding: 0;
     border-radius: 50%;
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
+    min-width: 150px;
+    min-height: 150px;
 }
 
 .controls {
@@ -75,6 +77,7 @@ h1 {
     background-color: #4d4d4d;
     padding: 1rem;
     border-radius: 8px;
+    width: 100%;
 }
 
 .preset-btn {
