--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,10 @@ h1 {
     background-color: #3d3d3d;
     padding: 1.5rem;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .timer {
@@ -53,10 +57,10 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 150px;
-    height: 150px;
-    min-width: 150px;
-    min-height: 150px;
+    width: 300px;
+    height: 300px;
+    min-width: 300px;
+    min-height: 300px;
 }
 
 .controls {
