--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    gap: 1rem;
 }
 
 .timer {
