--- a/styles.css
+++ b/styles.css
@@ -149,12 +149,22 @@ h1 {
     align-items: center;
     font-weight: 400;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .setting-item label {
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: #ffffff;
-    font-weight: 600;
+    font-weight: 400;
+    width: 60px;
+    text-align: center;
+}
+
+.time-unit {
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: 400;
+    margin-left: 0.5rem;
 }
 
 .setting-item input {
