--- a/styles.css
+++ b/styles.css
@@ -144,12 +144,13 @@ h1 {
 
 .setting-item {
     display: flex;
-    gap: 0.5rem;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     font-weight: 400;
     width: 100%;
     flex-wrap: wrap;
+    padding: 1rem;
 }
 
 .setting-item label {
