--- a/styles.css
+++ b/styles.css
@@ -143,21 +143,21 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: #4d4d4d;
+    margin-top: 1rem;
     padding: 1rem;
+    background-color: #4d4d4d;
     border-radius: 8px;
-    align-items: center;
+    width: 100%;
 }
 
 .setting-item {
     display: flex;
-    gap: 1rem;
-    justify-content: center;
+    gap: 0.5rem;
+    justify-content: flex-start;
     align-items: center;
     font-weight: 400;
     width: 100%;
-    flex-wrap: wrap;
-    padding: 1rem;
+    padding: 0.5rem;
 }
 
 .setting-item label {
