--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ h1 {
 
 .setting-item {
     display: flex;
-    gap: 0.5rem;
+    gap: 1rem;
     justify-content: flex-start;
     align-items: center;
     font-weight: 400;
@@ -164,8 +164,8 @@ h1 {
     font-size: 1rem;
     color: #ffffff;
     font-weight: 400;
-    width: 60px;
-    text-align: center;
+    min-width: 80px;
+    text-align: right;
 }
 
 .time-unit {
