--- a/styles.css
+++ b/styles.css
@@ -148,12 +148,15 @@ h1 {
     background-color: #4d4d4d;
     border-radius: 8px;
     width: 100%;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .setting-item {
     display: flex;
     gap: 1rem;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     font-weight: 400;
     width: 100%;
